--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tiptap/extension-table-cell": "^2.0.0-beta.20",
     "@tiptap/extension-table-header": "^2.0.0-beta.22",
     "@tiptap/extension-table-row": "^2.0.0-beta.19",
+    "@tiptap/extension-text-align": "^2.0.0-beta.29",
     "@tiptap/starter-kit": "^2.0.0-beta.183",
     "@tiptap/vue-3": "^2.0.0-beta.90",
     "@vueform/toggle": "^2.0.1",
@@ -20,6 +21,7 @@
     "highlightjs": "^9.16.2",
     "register-service-worker": "^1.7.2",
     "vue": "^3.2.13",
+    "vue-js-popover": "^1.2.1",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
